# odp2md

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simple-005.odp
examples/simple/: simple-002.odp  simple-003.odp  simple-004.odp
odp2md/: odp2md.py
odpmkd/: __main__.py  odpmkd.py
scripts/: process.sh
src/odpmkd/: __init__.py  __main__.py  odpmkd.py
tests/: tests_basic.py
